Patch by ahenriksson to fix a computation bug in Deskcalc

Ticket #8389 Signed off by John Scipione

When trimming trailing 0's to make the number fit in the window,
make sure to only trim trailing 0's AFTER the decimal point, not before.